recursion.lessons.recursion.koch.SquareKoch.scala.error
SquareKoch:22: error: value droite is not a member of Unit
	avance(length/4)droite(90)
                        ^